@@ -19,7 +19,6 @@ package org.apache.kafka.tiered.storage.integration;
 import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.test.api.Flaky;
 
-import java.util.Collections;
 import java.util.Map;
 
 @Flaky("KAFKA-18606")
@@ -27,6 +26,6 @@ public final class DeleteSegmentsByRetentionTimeTest extends BaseDeleteSegmentsT
 
     @Override
     protected Map<String, String> configsToBeAdded() {
-        return Collections.singletonMap(TopicConfig.RETENTION_MS_CONFIG, "1");
+        return Map.of(TopicConfig.RETENTION_MS_CONFIG, "1");
     }
 }
